# seafarer

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: __init__.py  basic_usage.py
infra/blob-sink/: compose.yaml
infra/blob-source/: .gitignore
infra/compose/: README.md  TESTING.md
infra/compose/blob-sink/: README.md  validate.sh
infra/compose/blob-source/: README.md  docker-compose.yml  seed.sh
src/: README.md
src/seafarer/: __init__.py  config.py
src/seafarer/cli/: __init__.py  main.py
src/seafarer/core/: __init__.py  pipeline.py
src/seafarer/ports/: __init__.py  base.py  blob_csv_reader.py  blob_parquet_writer.py
tests/: __init__.py  conftest.py  test_blob_csv_reader.py  test_blob_parquet_writer.py  test_config.py  test_pipeline.py  test_ports.py
